update package naming convention

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.adobe.uxp.starter.react",
+    "name": "photoshop.upscale.plugin",
     "version": "1.0.0",
     "scripts": {
         "watch": "nodemon -w src -e js,jsx,json,css,html -w webpack.config.js -x npm run build",
@@ -9,8 +9,8 @@
         "uxp:watch": "cd dist && nodemon --exec \"uxp plugin reload\" -e js,css,html",
         "uxp:debug": "cd dist && uxp plugin debug"
     },
-    "author": "Adobe Inc",
-    "license": "Apache-2.0",
+    "author": "PixelBin",
+    "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.8.7",
         "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
