--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "photoshop.upscale.plugin",
+    "name": "upscale.media",
     "version": "1.0.0",
     "scripts": {
         "watch": "nodemon -w src -e js,jsx,json,css,html -w webpack.config.js -x npm run build",
